--- a/my_wechat_demo/app.json
+++ b/my_wechat_demo/app.json
@@ -1,14 +1,53 @@
 {
-  "pages": [
-    "pages/home/home",
-    "pages/about/about"
-  ],
-  "window": {
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Weixin",
-    "navigationBarTextStyle": "black"
-  },
-  "style": "v2",
-  "sitemapLocation": "sitemap.json"
+        "pages": [
+                "pages/home/home",
+                "pages/about/about",
+                "pages/service/service",
+                "pages/category/category",
+                "pages/mine/mine"
+        ],
+        "window": {
+                "backgroundTextStyle": "light",
+                "navigationBarBackgroundColor": "#d35d6e",
+                "navigationBarTitleText": "我的小程序 DEMO",
+                "navigationBarTextStyle": "white",
+                "backgroundColor": "#16697a",
+                "enablePullDownRefresh": true
+        },
+        "tabBar": {
+          "list": [
+            {
+              "pagePath": "pages/home/home",
+              "text": "首页",
+              "iconPath": "assets/tabbar/home.png",
+              "selectedIconPath": "assets/tabbar/home_active.png"
+            },
+            {
+              "pagePath": "pages/category/category",
+              "text": "分类",
+              "iconPath": "assets/tabbar/category.png",
+              "selectedIconPath": "assets/tabbar/category_active.png"
+            },
+            {
+              "pagePath": "pages/service/service",
+              "text": "服务",
+              "iconPath": "assets/tabbar/service.png",
+              "selectedIconPath": "assets/tabbar/service_active.png"
+            },
+            {
+              "pagePath": "pages/about/about",
+              "text": "关于",
+              "iconPath": "assets/tabbar/about.png",
+              "selectedIconPath": "assets/tabbar/about_active.png"
+            },
+            {
+              "pagePath": "pages/mine/mine",
+              "text": "我的",
+              "iconPath": "assets/tabbar/my.png",
+              "selectedIconPath": "assets/tabbar/my_active.png"
+            }
+          ]
+        },
+        "style": "v2",
+        "sitemapLocation": "sitemap.json"
 }
