改变底部菜单文字颜色

--- a/my_wechat_demo/app.json
+++ b/my_wechat_demo/app.json
@@ -15,6 +15,7 @@
                 "enablePullDownRefresh": true
         },
         "tabBar": {
+          "selectedColor": "#16697a",
           "list": [
             {
               "pagePath": "pages/home/home",
