--- a/my_wechat_demo/app.json
+++ b/my_wechat_demo/app.json
@@ -14,6 +14,9 @@
     "backgroundColor": "#16697a",
     "enablePullDownRefresh": true
   },
+  "usingComponents": {
+    "my-component":"./components/my-component/my-component"
+  },
   "tabBar": {
     "selectedColor": "#16697a",
     "list": [
